# ScaffCC

./: .gitignore  .travis.yml  Intrinsics.gen  LICENSE  Makefile  README.md  README.txt  build.sh  changelog.txt  iterative_phase_estimation_qchem.py  scaffold.sh  source_me
Algorithms/Binary_Welded_Tree/: Binary_Welded_Tree.scaffold  binary_welded_tree.n100s100.scaffold  binary_welded_tree.scaffold
Algorithms/Boolean_Formula/: boolean_formula.scaffold  boolean_formula.x2y2.scaffold
Algorithms/Cat_State/: cat_state.n04.scaffold
Algorithms/Class_Number/: class_number.scaffold
Algorithms/Ground_State_Estimation/: ground_state_estimation.h2.scaffold  ground_state_estimation.m10.scaffold  ground_state_estimation.scaffold
Algorithms/Ising_Model/: ising_model.n10.scaffold  ising_model.n1000.scaffold  ising_model.n500.scaffold  ising_model.scaffold
Algorithms/Linear_Systems/: linear_systems.scaffold
Algorithms/QFT/: qft.n05.scaffold  qft.scaffold
Algorithms/RKQC_Testing/: rkqc_test.n32.scaffold  rkqc_test_2.scaffold
Algorithms/SHA-1/: sha1.n128.scaffold  sha1.n448.scaffold  sha1.scaffold  sha1_n128.scaffold  sha1_n128_rkqc.scaffold
Algorithms/Shors/: inline_info.txt  inlining_info.txt  shors.n512.scaffold
Algorithms/Shortest_Vector_Problem/: shortest_vector.scaffold
Algorithms/Square_Root/: README.txt  ctqg_square.scaffold  square_root.n10.scaffold  square_root.n4.scaffassert  square_root.n4.scaffold  square_root.scaffold
Algorithms/Triangle_Finding_Problem/: OracleforTriangleFindingProblem_Nonclassical.txt  TFP_Main.scaffold  TFP_Oracle.scaffold  (+4 more)
braidflash/: License  Makefile  arrange.py  braidflash.cpp  config.cfg  parse_results.sh
clang/: CMakeCache.txt
ctqg/: ctqg.tar  e00_hello_world.ctqg  e01_swap_two_bits.ctqg  e02_swap_two_triplets.ctqg  e03_swap_two_triplets2.ctqg  e04_swap_two_triplets3.ctqg  e05_swap_two_bit_strings.ctqg  e06_swap_two_bit_strings2.ctqg  e07_integer_arithm.ctqg  e08_ancilla_signals.ctqg  e09_bit_constants.ctqg  e10_bit_str_const.ctqg  e11_integer_const.ctqg  e12_sort_two_integers.ctqg  e13_usage_of_language_c.ctqg  e14_low_level_sig_map.ctqg  e15_loop_unrolling.ctqg  e16_fixed_point_arithm.ctqg  source_me.setup  user_manual.ps
docs/: Documentation.tex  Documentation.toc  Makefile  documentation.vim  jpaper.cls  references.bib
llvm/: .gitignore  CMakeLists.txt  LLVMBuild.txt  Makefile.rules  llvm.diff
rkqc/: build.sh  make.py  rkqc
rkqc/src/: CMakeLists.txt  libs
rkqc/src/algorithms/: CMakeLists.backup
rkqc/src/bindings/: CMakeLists.backup
rkqc/src/core/: '  CMakeLists.txt  circuit.cpp  circuit.hpp  functor.hpp  gate.cpp  gate.hpp  pattern.cpp  pattern.hpp  properties.cpp  properties.hpp  run.sh  target_tags.cpp  target_tags.hpp  truth_table.cpp  truth_table.hpp  version.cpp  version.hpp  working.vim
rkqc/src/core/functions/: active_controls.cpp  active_controls.hpp  add_circuit.cpp  add_circuit.hpp  add_gates.cpp  add_gates.hpp  add_line_to_circuit.cpp  add_line_to_circuit.hpp  circuit_hierarchy.cpp  circuit_hierarchy.hpp  circuit_to_truth_table.cpp  circuit_to_truth_table.hpp  clear_circuit.cpp  clear_circuit.hpp  control_lines.hpp  copy_circuit.cpp  copy_circuit.hpp  copy_metadata.cpp  copy_metadata.hpp  create_simulation_pattern.cpp  create_simulation_pattern.hpp  expand_circuit.cpp  expand_circuit.hpp  extend_truth_table.cpp  extend_truth_table.hpp  find_lines.cpp  find_lines.hpp  flatten_circuit.cpp  flatten_circuit.hpp  fully_specified.cpp  fully_specified.hpp  reverse_circuit.cpp  reverse_circuit.hpp  target_lines.hpp  transposition_to_circuit.cpp  transposition_to_circuit.hpp
rkqc/src/core/io/: create_image.cpp  create_image.hpp  io_utils_p.hpp  print_circuit.cpp  print_circuit.hpp  print_statistics.cpp  print_statistics.hpp  read_pattern.cpp  read_pattern.hpp  read_pla.cpp  read_pla.hpp  read_pla_to_bdd.cpp  read_pla_to_bdd.hpp  read_realization.cpp  read_realization.hpp  read_specification.cpp  read_specification.hpp  revlib_parser.cpp  revlib_parser.hpp  revlib_processor.cpp  revlib_processor.hpp  write_blif.cpp  write_blif.hpp  write_realization.cpp  write_realization.hpp  write_specification.cpp  write_specification.hpp  write_verilog.cpp  write_verilog.hpp
rkqc/src/core/meta/: bus_collection.cpp  bus_collection.hpp
rkqc/src/core/utils/: costs.cpp  costs.hpp  program_options.cpp  program_options.hpp  timer.hpp
rkqc/src/examples/: CMAKE_HEADER  CMakeLists.txt  e001_hello_world.cpp  e002_signals_and_gates.cpp  e003_ancilla_hierarchy.cpp  e004_assign_value.cpp  e005_adder.cpp  e006_data_types.cpp  e007_multiplier.cpp  e008_swap.cpp  e009_swap_triples.cpp  e010_swap_triples_2.cpp  e011_swap_triples_3.cpp  rkqc.cpp  sha1_n128.encrypt.cpp  test.test2.cpp
rkqc/src/unstable/: CMakeLists.txt  null.cpp
scaffold/: GOALS.txt  Makefile  Scaffold.makefile  Scaffold_QPE.makefile  basename.sh  flatten-qasm-gatech.py  flatten-qasm.py  gen-flat-qasm.sh  gen-qasm-script  insert_reverse.py  rtre-memoized.sh  rtre-script.sh  run-GSE  run-boolean  run-grovers  scaffold.cpp  scaffold_lib.cpp
scripts/: README.md  README.txt  comm_aware.pl  file_list  flattening_thresh.py  flattening_thresh_2M.py  frequency-estimation-hybrid.c  full_sched_regress.sh  gen-cp.sh  gen-flattening-files.py  gen-freq-estimate.sh  gen-ll.sh  gen-lpfs.sh  gen-scheds.sh  get_total_gates_line.py  ground_state_estimation.scaffold  leaves.pl  make_regression_testcase.sh  qasmf2qc.sh  read_me.txt  regress.sh  regression_test.sh  remove_global_phase.py  resource_estimator.py  rkqc_test.n32.errs  sched.pl  simulate.sh
(+477 files in other folders)
